# Reshape

./: .gitignore  CMakeLists.txt  README.md  build.sh  diff.md  required.txt
Forge/: CMakeLists.txt  README.md
Forge/backends/: ShaderGenerator.cpp  ShaderGenerator.h  ShaderParser.cpp
Forge/backends/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRenderAPI.cpp  OpenGLRenderAPI.h  OpenGLShader.cpp  OpenGLShader.h
Forge/backends/Platform/Window/: DefaultWindow.cpp  DefaultWindow.h
Forge/include/Forge/: Forge.hpp
Forge/include/Forge/Events/: Event.h  ImplEvent.h  KeyCodes.h
Forge/include/Forge/Renderer/: Buffer.h  BufferImpl.h  GraphicsContext.h  RenderAPI.h  Shader.h  Window.h
Forge/include/Forge/Renderer/Shader/: ShaderGenerator.h  ShaderParser.h
Forge/include/Forge/Utils/: Common.h  ErrorCodes.h  FileSystem.h  Log.h  Math.h  Platform.h  Profiling.h  Utils.h
Forge/src/Events/: Event.cpp
Forge/src/Renderer/: Buffer.cpp  BufferImpl.cpp  GraphicsContext.cpp  RenderAPI.cpp  Shader.cpp  Window.cpp
Forge/src/Renderer/Shader/: ShaderGenerator.cpp  ShaderParser.cpp
Forge/src/Utils/: FileSystem.cpp  Log.cpp
Reshape/: CMakeLists.txt
Reshape/src/: Application.cpp  Application.h  main.cpp
Reshape/src/Utils/: Parsing.cpp  Parsing.h
cmake/modules/: CheckAndCloneLibrary.cmake
shaders/: main.glsl
